--- a/potatohead.html
+++ b/potatohead.html
@@ -12,7 +12,7 @@
 
 		<div id="potato">
 			<img id="arms_image" src="potatohead_files/arms.png" alt="arms" style="top: 177px; left: 26px;">
-			<img id="ears_image" >
+			<img id="ears_image" src="potatohead_files/ears.png" alt="eyes" style="top: 200px; left: 26px;">
 			<img id="eyes_image" >
 			<img id="mouth_image" >
 			<img id="nose_image" >
