added extra assets and directions

--- a/potatohead.html
+++ b/potatohead.html
@@ -3,16 +3,17 @@
 <html>
 	<head>
 		<title>Mr. Potato Head</title>
-		<link href="./potatohead_files/potato.css" type="text/css" rel="stylesheet">
+		<link href="potato.css" type="text/css" rel="stylesheet">
+		<script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
 	</head>
 
 	<body>
 		<h1>Mr. Potato Head</h1>
-		<h2 id="status">He is wearing: </h2>
 
 		<div id="potato">
-			<img id="arms_image" src="potatohead_files/arms.png" alt="arms" style="top: 177px; left: 26px;">
-			<img id="ears_image" src="potatohead_files/ears.png" alt="eyes" style="top: 200px; left: 26px;">
+			<img id="body" src="assets/body.png">
+			<img id="arms_image">
+			<img id="ears_image">
 			<img id="eyes_image" >
 			<img id="mouth_image" >
 			<img id="nose_image" >
@@ -21,6 +22,10 @@
 			<img id="hat_image" >
 			<img id="moustache_image" >
 			<img id="shoes_image" >
+			<img id="cane">
+			<img id="earrings">
+			<img id="hatflower">
+			<img id="boosters">
 		</div>
 
 </body>
