Added script.js link

--- a/potatohead.html
+++ b/potatohead.html
@@ -5,6 +5,7 @@
 		<title>Mr. Potato Head</title>
 		<link href="potato.css" type="text/css" rel="stylesheet">
 		<script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+		<script src="script.js"></script>
 	</head>
 
 	<body>
